--- a/Cursos/Practic/page3/style.css
+++ b/Cursos/Practic/page3/style.css
@@ -250,9 +250,6 @@ height: 60px;
         z-index: auto; 
     
     } 
-    nav a{
-        display: block;
-    }
     .title{
          font-size: 0.7rem;
          text-align: center;
@@ -308,5 +305,16 @@ height: 60px;
     }
     .derechos{
       margin-top: -3rem;
+    }
+}
+
+@media ( max-width: 600px) {
+    nav{
+        display: block;
+        width: 22px;
+        height: 2px;
+        border-radius: 1px; 
+        position: relative;
+        left: 10rem;
     }
 }
